@@ -143,7 +143,7 @@ pager_read(struct view *view, struct buffer *buf, bool force_stop)
 	if (!buf) {
 		if (!diff_done_highlight(view->private)) {
 			if (!force_stop)
-				report("Failed to run the diff-highlight program: %s", opt_diff_highlight);
+				report("Failed to run the diff-highlight program: %s", *opt_diff_highlight);
 			return false;
 		}
 
