@@ -798,7 +798,7 @@ stage_read(struct view *view, struct buffer *buf, bool force_stop)
 	if (!buf) {
 		if (!diff_done_highlight(&state->diff)) {
 			if (!force_stop)
-				report("Failed to run the diff-highlight program: %s", opt_diff_highlight);
+				report("Failed to run the diff-highlight program: %s", *opt_diff_highlight);
 			return false;
 		}
 
